--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\fadyf\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/Users/marawanalymoubark/Library/Android/sdk
+flutter.sdk=/Users/marawanalymoubark/Desktop/Files/Support/flutter
